test(selfrun3): align 3.1 validation with dev21 baseline